Project 8: Low Contrast Fix

--- a/techdegree/proj8/css/survey.css
+++ b/techdegree/proj8/css/survey.css
@@ -68,7 +68,7 @@ input[type=radio]:focus + label {
 }
 #albums, textarea, input[type=text], input[type=email] {
 	border-radius: 5px;
-	border: 3px solid #02CBA4;
+	border: 3px solid #02eabb;
 }
 .form-section button {
 	width: 100%;
